Stop squishing code with CSS

--- a/stylesheets/screen.scss
+++ b/stylesheets/screen.scss
@@ -198,7 +198,7 @@ th, td {
 .column {
   padding: 1em;
 
-  *:last-child {
+  p:last-child {
     margin-bottom: 0;
   }
 }
